# GeMTeX

./: .aiignore  .gitignore  README.md
inception_ahd_recommender/: Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  setup.py
inception_ahd_recommender/ariadne/: classifier.py  server.py  util.py
inception_ahd_recommender/ariadne/contrib/: external_server_consumer.py  external_uima_classifier.py  inception_util.py
inception_ahd_recommender/ariadne/contrib/uima_cas_mapper/: mapping_reader.py
inception_ahd_recommender/docker-recommender-start/: Dockerfile
inception_ahd_recommender/prefab-mapping-files/: deid_mapping_multilayer.json  deid_mapping_singlelayer.json  deid_mapping_singlelayer_v2.json  general_mapping_singlelayer.json  snomed_mapping_singlelayer.json
inception_ahd_recommender/scripts/: tester.py  util.py
inception_ahd_recommender/tests/: test_external_server_consumer.py  test_inception_util.py  test_recommender.py  util.py
inception_ahd_recommender/tests/resources/: Albers.snomed.xmi  Baastrup.general.xmi  albers_TypeSystem.xml  albers_response.json  general_TypeSystem.xml  snomed_TypeSystem.xml  test_config.json
llm-ade-extraction/: .env.example  pyproject.toml  uv-test-command
llm-ade-extraction/src/ade_extraction_pipeline/: main.py
llm-ade-extraction/src/ade_extraction_pipeline/async_parts/: file_handling.py
llm-ade-extraction/src/ade_extraction_pipeline/pipeline_parts/: amts.py  coding.py  extraction.py
llm-ade-extraction/src/ade_extraction_pipeline/utils/: enums.py  server.py
llm-ade-extraction/src/configs/: blablador.yaml  default.yaml  ollama.yaml  smpc_blablador.yaml
llm-ade-extraction/test/: Albers.txt  test_file.txt
scripts/snomed-postprocessing/: README.md  main.py  pyproject.toml
scripts/snomed-postprocessing/config/: blacklist_filter.txt
scripts/snomed-postprocessing/data/: blacklist_filter.txt  gemtex_snomedct_codes.hdf5.bak
scripts/snomed-postprocessing/src/snomed_post_processing/: main.py
scripts/snomed-postprocessing/src/snomed_post_processing/snowstorm_funcs/: __init__.py
scripts/snomed-postprocessing/src/snomed_post_processing/uima_processing/: __init__.py
scripts/snomed-postprocessing/src/snomed_post_processing/utils/: __init__.py
scripts/snomed-postprocessing/test/: Boeck.txt.json
scripts/uima_cas_converter/: README.md  main.py  pyproject.toml
scripts/uima_cas_converter/src/uima_cas_converter/: main.py
snomed-postprocessing/: Dockerfile  README.md  entrypoint.sh  log-inception-docs.sh  pyproject.toml  start-gui.sh
snomed-postprocessing/config/: blacklist_filter_tags.txt
snomed-postprocessing/src/snomed_post_processing/: main.py  streamlit_app.py
snomed-postprocessing/src/snomed_post_processing/snowstorm_funcs/: __init__.py
snomed-postprocessing/src/snomed_post_processing/uima_processing/: __init__.py
snomed-postprocessing/src/snomed_post_processing/utils/: __init__.py
surrogator/: .gitignore  CONTRIBUTORS.txt  Dockerfile  End-to-End-Example.md  LICENSE  MANIFEST.in  NOTICE.txt  Readme.md  Readme_Webservice.md  docker-compose.yml  pyproject.toml  surrogator.py
surrogator/Surrogator/Configuration/: const.py  model_loader.py
surrogator/Surrogator/FileUtils/: __init__.py
surrogator/Surrogator/QualityControl/: __init__.py
surrogator/Surrogator/QualityControl/CASexamination/: __init__.py
surrogator/Surrogator/Substitution/CasManagement/: __init__.py
surrogator/Surrogator/Substitution/CasManagement/Fictive/: __init__.py
surrogator/Surrogator/Substitution/CasManagement/Gemtex/: __init__.py
surrogator/Surrogator/Substitution/CasManagement/Simple/: __init__.py
surrogator/Surrogator/Substitution/Entities/Contact/: __init__.py
surrogator/Surrogator/Substitution/Entities/Date/: __init__.py  dateFormats.py
surrogator/Surrogator/Substitution/Entities/Id/: __init__.py
surrogator/Surrogator/Substitution/Entities/Location/Location_Hospital/: __init__.py
surrogator/Surrogator/Substitution/Entities/Location/Location_address/: __init__.py
surrogator/Surrogator/Substitution/Entities/Location/Location_orga_other/: __init__.py
surrogator/Surrogator/Substitution/Entities/Name/: __init__.py
surrogator/Surrogator/Substitution/Entities/Name/NameTitles/: __init__.py
surrogator/Surrogator/Substitution/KeyCreator/: __init__.py
surrogator/Surrogator/Substitution/ProjectManagement/: __init__.py
surrogator/Surrogator/Webservice/: __init__.py
surrogator/resources/Location_Lists/: Combined_healthcare_facilities.txt  Krankenhaus.txt  Krankenkasse.txt  location_other_osm_primary_map_features.txt  organizations_office_craft_club_industrial.txt
surrogator/resources/de_subLists/: city.json  city_rec.json  family.json  female.json  female_nick.json  male.json  male_nick.json  org.json  street.json
surrogator/resources/excepted_layers/GeMTeX/: TypeSystem.xml  layer_inception-gemtex-deid-base_project-grascco.json
surrogator/resources/phone/: tel_numbers.json  tel_numbers_by_city.json  tel_numbers_merged.json
surrogator/resources/titles/: name_titles.json
surrogator/test_data/deid-test-doc/: alpenwirt.txt  beruf_einrichtung.txt  busfahrerin.txt  contact.txt  kein_geburtsdatum.txt  rechnung.txt  rosensaele.txt  rotes_haus.txt
surrogator/test_data/grascco_examples/: Albers.txtphi-pii_2.0.json  Amanda_Alzheimer.txtphi-pii_2.0.json  Baastrup.txtphi-pii_2.0.json  Beuerle.txtphi-pii_2.0.json  Boeck.txtphi-pii_2.0.json  Cajal.txtphi-pii_2.0.json  Clausthal.txtphi-pii_2.0.json  Colon_Fake_A.txtphi-pii_2.0.json  Colon_Fake_B.txtphi-pii_2.0.json  Colon_Fake_C.txtphi-pii_2.0.json
surrogator/test_data/projects/project-deid-test-data-1-2025-09-18-160813/annotation/alpenwirt.txt/: INITIAL_CAS.json  admin.json
surrogator/test_data/projects/project-deid-test-data-1-2025-09-18-160813/annotation/beruf_einrichtung.txt/: INITIAL_CAS.json  (+1 more)
surrogator/test_data/projects/project-deid-test-data-1-2025-09-18-160813/source/: gesetzesnennung.txt  klinik-mit-name.txt  lokation.txt  minister_angehörige.txt  verstorben.txt  weitsprung.txt  zwei_idenditäten.txt
(+215 files in other folders)
