[project]
name = "ade_extraction_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "oaklib>=0.6.23",
    "pydantic-ai==1.17.0",
]

[project.scripts]
start-pipeline = "ade_extraction_pipeline.main:start_pipeline"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
